[gd_scene load_steps=5 format=3 uid="uid://canca02so8atk"]

[ext_resource type="Script" uid="uid://cyfltr50d01s6" path="res://Global/high_scores.gd" id="1_4bm2n"]
[ext_resource type="Texture2D" uid="uid://dx3aw3eu75fkg" path="res://assets/Images/UI/fade.png" id="1_m66qf"]
[ext_resource type="FontFile" uid="uid://bgm05gc7gacrl" path="res://UI font.tres" id="3_cxkri"]
[ext_resource type="Texture2D" uid="uid://d03wv2wyhb70c" path="res://assets/Images/UI/button.png" id="3_kj5d3"]

[node name="high_score" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_4bm2n")

[node name="Fade" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.498039)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_m66qf")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="High score text" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 74.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("3_cxkri")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]high_scores"
scroll_active = false
shortcut_keys_enabled = false

[node name="score_element" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -21.0
offset_right = 250.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_cxkri")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Survival:"
fit_content = true

[node name="score_holders" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Return" type="Button" parent="."]
offset_right = 208.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("3_cxkri")
theme_override_font_sizes/font_size = 20
text = "quit"
icon = ExtResource("3_kj5d3")
flat = true
icon_alignment = 1

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
